Custom color and font in minimal mistakes

--- a/_posts/2020-02-03-python3.8-new-feature.md
+++ b/_posts/2020-02-03-python3.8-new-feature.md
@@ -1,4 +1,5 @@
 ---
+layout: single
 title: Python 3.8 New Feature
 categories: [development, language]
 tags: [development, language, python]
@@ -20,7 +21,7 @@ Python 3.8이 10/14일에 release 되었습니다.
 
 ## 1. Assignment Expression(Walrus Operator)
 
-Assignment expression은 **`:=`** 으로 사용한다.
+Assignment expression은 `:=` 으로 사용한다.
 
 기존 코드과 다음과 같다면
 
@@ -42,7 +43,7 @@ if (n := len(a)) > 10:
 
 함수의 인자에 대해서 keyword or position을 선택적으로 사용할 수 있다.
 
-매개변수에  ` /` 있으면 앞의 매개변수는 keyword를 사용할 수 없고 오직 position(위치)에 맞게 매개변수를 사용해야한다.
+매개변수에  `/` 있으면 앞의 매개변수는 keyword를 사용할 수 없고 오직 position(위치)에 맞게 매개변수를 사용해야한다.
 
 `/` 와 `*`  사이의 매개변수는 keyword와 position 모두 사용 가능하다.
 
